tests/src/frontend/syntax/invalid/invalid_dot.sk

fun test(): void {
    x.0
}
